fixed index info tab overflow at index

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -46,9 +46,13 @@ a {
 
 #logo-img {
   /* height: 100%; */
-  width: 100%;
+  /* width: 100%; */
+  max-width: 627.92px;
+  max-height: 109.92px;
   padding: 10px 10px 10px 7px;
-  align-self: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #slogan {
@@ -560,6 +564,13 @@ input[type="range"] {
 
   .main-row {
       padding-top: 25px;
+  }
+
+  #logo-img {
+    /* height: 100%; */
+    width: 100%;
+    padding: 10px 10px 10px 7px;
+    align-self: center;
   }
   
 
